# llm-foundry

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  LEARNING_PATH.md  LICENSE  PROJECT_REVIEW.md  PROJECT_STATUS.md  QUICK_START_PRACTICE.md  README.md  SUMMARY.md  USER_GUIDE.md  data.py  generate.py  pyproject.toml  requirements-dev.txt  setup.py
.claude/: settings.local.json
configs/: base.yaml  medium.yaml  small.yaml
docs/: README.md  architecture-training.md  hardware-config.md  hardware-rtx5060.md
docs/zh/: architecture.md  architecture.md.deprecated  quickstart.md  quickstart.md.deprecated
docs/zh/architecture/: README.md  components.md
docs/zh/hardware/: README.md
examples/: 01_basic_training.py  02_custom_data.py  03_generation_sampling.py  04_config_management.py
scripts/: generate.py  train.py  verify_installation.py
simple/: README.md  config.py
src/llm_foundry/: __init__.py
src/llm_foundry/config/: __init__.py  loader.py  model_config.py
src/llm_foundry/data/: __init__.py  loader.py
src/llm_foundry/inference/: __init__.py  generator.py
src/llm_foundry/models/: __init__.py  components.py  transformer.py
src/llm_foundry/tokenizers/: __init__.py  sp_tokenizer.py
src/llm_foundry/training/: __init__.py  trainer.py
src/llm_foundry/utils/: __init__.py  checkpointing.py  device.py
tests/: __init__.py  test_models.py
tutorials/: QUICK_REFERENCE.md  README.md  RTX5060_GUIDE.md  config.py  dataloader.py  generate.py  model.py  tokenizer.py  train.py  train_m4pro.py  train_rtx5060.py
